--- a/2018-12-26.md
+++ b/2018-12-26.md
@@ -1,4 +1,5 @@
 # diary
 6:00 - 8:00 ok
 8:00 - 12:00 trix + pic upload think ok.finish it  afternoon
+     jekyll theme and bootstrap theme
 0:00 - 2:30  
