--- a/2018-12-26.md
+++ b/2018-12-26.md
@@ -2,4 +2,6 @@
 6:00 - 8:00 ok
 8:00 - 12:00 trix + pic upload think ok.finish it  afternoon
      jekyll theme and bootstrap theme
-0:00 - 2:30  
+0:00 - 2:30  eat need slow , eat is very important for health
+2:30 - 6:00  need focus on web dev, if no linux , You can have some think also focus on web dev.   
+
